--- a/main.html
+++ b/main.html
@@ -1,3 +1,5 @@
+Box Model
+
 <!DOCTYPE html>
 
 <html>
@@ -8,6 +10,10 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	  <div class="container">
+        <div class="green"></div>
+        <div class="yellow"></div>
+        <div class="red"></div>
     <script type="text/javascript" src="./script.js">
 </script>
 
